--- a/planets-js.html
+++ b/planets-js.html
@@ -5,6 +5,7 @@
     <title>Planets JS</title>
 </head>
 <body>
-    <script src="js/planets-array.js"></script>
+   <!-- <script src="js/planets-array.js"></script> -->
+    <script src="js/planets-string.js"></script>
 </body>
 </html>
