--- a/welcome.html
+++ b/welcome.html
@@ -2,25 +2,131 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello, World!</title>
+    <title>Veridian Dynamics</title>
+    <style>
+
+        img {
+            height: 200px;
+            width: 200px;
+        }
+
+        table, th, td {
+            border: 1px solid black;
+        }
+
+    </style>
 </head>
 <body>
-<h1>Hello, World!</h1>
 
-<h3>Unordered Lists are Bulleted!</h3>
+<header id="top">
+<h1>Welcome to Veridian Dynamics!</h1>
+<p>At Veridian Dynamics, <b>we</b> solve your problems with <b><em>technology.</em></b></p>
+</header>
 
-<ul>
-    <li>Item</li>
-    <li>Another Item</li>
-    <li>Yet Another Item</li>
-</ul>
+<main>
+    <section>
 
-<h3>Ordered Lists are Numbered!</h3>
+        <h2>Core Values</h2>
 
-<ol>
-    <li>First Item</li>
-    <li>Second Item</li>
-    <li>Third Item</li>
-</ol>
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
+
+        <h2>Our Process</h2>
+
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+
+        <h2>2020 Vision</h2>
+
+        <ol>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ol>
+
+    </section>
+
+<hr>
+
+    <section>
+
+        <h2>Company Vision</h2>
+
+        <img src="https://images.pexels.com/photos/4577212/pexels-photo-4577212.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Island Real Estate" title="Island Real Estate Opportunities!">
+
+        <img src="https://images.pexels.com/photos/5878503/pexels-photo-5878503.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Affordable Healthcare" title="Affordable Healthcare!">
+
+        <br>
+
+        <img src="https://images.pexels.com/photos/5641472/pexels-photo-5641472.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Beauty Products" title="100% Organic All-Natural Beauty Products!">
+
+        <img src="https://images.pexels.com/photos/3244598/pexels-photo-3244598.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Siberian Street Fashion" title="Siberian Street Fashion!">
+        
+    </section>
+
+    <section>
+
+        <h2>Our Product</h2>
+
+        <table>
+
+            <tr>
+
+                <th>Plan</th>
+
+                <th>Price</th>
+
+                <th>Features</th>
+
+            </tr>
+
+            <tr>
+
+                <td>Starter</td>
+
+                <td>$99</td>
+
+                <td>Base Technology</td>
+
+            </tr>
+
+            <tr>
+
+                <td>Advanced</td>
+
+                <td>$199</td>
+
+                <td>Additional Features</td>
+
+            </tr>
+
+            <tr>
+
+                <td>Premium</td>
+
+                <td>$499</td>
+
+                <td>Unlimited Support</td>
+
+            </tr>
+
+        </table>
+
+        <p><em>All products come with our quality guarantee&trade;.</em></p>
+
+    </section>
+
+</main>
+
+<footer>
+    <a href="#top">Back to top</a>
+</footer>
+
 </body>
 </html>
