--- a/forms.html
+++ b/forms.html
@@ -27,17 +27,20 @@
 
     <p>How did you hear about us?</p>
 
-    <label for="billboard">Billboard
-    <input type="radio" name="hear" id="billboard" value="Billboard"></label><br>
+    <input type="radio" name="hear" id="billboard" value="Billboard">
+    <label for="billboard">Billboard</label><br>
 
-    <label for="radio-advertisement">Radio Advertisement
-    <input type="radio" name="hear" id="radio-advertisement" value="radio-advertisement"></label><br>
 
-    <label for="tv-advertisement">TV Advertisement
-    <input type="radio" name="hear" id="tv-advertisement" value="tv-advertisement"></label><br>
+    <input type="radio" name="hear" id="radio-advertisement" value="radio-advertisement">
+    <label for="radio-advertisement">Radio Advertisement</label><br>
 
-    <label for="other">Other
-    <input type="radio" name="hear" id="other" value="other"></label><br>
+
+    <input type="radio" name="hear" id="tv-advertisement" value="tv-advertisement">
+    <label for="tv-advertisement">TV Advertisement</label><br>
+
+
+    <input type="radio" name="hear" id="other" value="other">
+    <label for="other">Other</label><br>
 
     <label for="browser">What web browser are you using?</label>
     <select name="browser" id="browser">
