--- a/welcome.html
+++ b/welcome.html
@@ -3,23 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
-    <style>
-
-        img {
-            height: 400px;
-            width: 400px;
-        }
-
-        table, th, td {
-            border: 1px solid black;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header id="top">
-<h1>Welcome to Veridian Dynamics!</h1>
+<h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
 <p>At Veridian Dynamics, <b>we</b> solve your problems with <b><em>technology.</em></b></p>
 </header>
 
