--- a/bootstrap-resume.html
+++ b/bootstrap-resume.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="jumbotron">
-    <div class="container topContainer text-center">
+    <div class="text-center">
         <h1 class="display-4">Cody the Duck</h1>
         <h3>Software Developer</h3>
         <p class="lead">"Quack."</p>
@@ -42,7 +42,7 @@
 
         <div class="col-12 col-lg-5">
             <h2>SKILLS AND ABILITIES</h2>
-            <ul class="skills">
+            <ul>
                 <li>JAVA</li>
                 <li>C#</li>
                 <li>PYTHON</li>
