removed unnecessary div

--- a/bootstrap-resume.html
+++ b/bootstrap-resume.html
@@ -11,12 +11,10 @@
     <script src="https://kit.fontawesome.com/36f035c426.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="jumbotron">
-    <div class="text-center">
-        <h1 class="display-4">Cody the Duck</h1>
-        <h3>Software Developer</h3>
-        <p class="lead">"Quack."</p>
-    </div>
+<div class="jumbotron text-center">
+    <h1 class="display-4">Cody the Duck</h1>
+    <h3>Software Developer</h3>
+    <p class="lead">"Quack."</p>
 </div>
 <div class="container">
 
