--- a/order-pizza.html
+++ b/order-pizza.html
@@ -7,7 +7,7 @@
     <title>Order a Pizza!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- Your custom css styles go here -->
-    <link rel="stylesheet" href="css/order-pizza.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
