updated defuser innerText

--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -34,7 +34,7 @@
         clearInterval(updateTimer);
         alert('BOM SUCCESSFULLY DEFUSED');
         document.getElementById('message').innerHTML = '<h2>You defused the BOM!</h2>'
-        document.getElementById('defuser').innerHTML = 'Good job!';
+        document.getElementById('defuser').innerText = 'Good job!';
     }
 
     // Don't modify anything below this line!
