--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
 <script type="text/javascript">
     "use strict";
 
