--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,14 +6,22 @@
 </head>
 <body>
 
-<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
-<script type="text/javascript">
-    "use strict";
 
-    $(document).ready(function() {
-        alert("The DOM has finished loading.");
-    })
-</script>
+
+        <h1 class="codeup" id="exercise-heading">jQuery Exercises</h1>
+        <p>jQuery Exercises, but this time it's smaller</p>
+        <h4 class="codeup" id="music-heading">Musical Genres that Exist</h4>
+        <ul id="music-list">
+            <li id="rock">Rock</li>
+            <li id="rap">Rap</li>
+            <li id="jazz">Jazz</li>
+        </ul>
+        <h4 class="codeup" id="code">Codeup</h4>
+
+
+
+<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
+<script type="text/javascript" src="js/jquery-exercises.js"></script>
 
 </body>
 </html>
