--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -5,7 +5,7 @@
     <title>National Parks</title>
     <style>
         .invisible {
-            visibility: hidden;
+            display: none;
         }
 
         .highlighted {
@@ -27,6 +27,11 @@
     </style>
 </head>
 <body>
+
+<div id="news-ad">
+    <span id="hide-news">X</span>
+    <h1>Would you like to sign up for our newsletter?</h1>
+</div>
 
 <h2>Frequently-asked questions about the National Parks</h2>
 <dl>
@@ -63,24 +68,26 @@
 
 <button id="toggle-invisible">Reveal FAQ answers!</button>
 
-<h3>Grand Canyon</h3>
-<ul>
+<h2 id="register">Please register for our site!</h2>
+
+<h3>Click to see facts about the Grand Canyon!</h3>
+<ul class="hidden-facts">
     <li>The Grand Canyon creates its own weather</li>
     <li>The are no dinosaur bones in the Grand Canyon</li>
     <li>Fish are uncommon in the Grand Canyon</li>
     <li>There is a town in the Grand Canyon</li>
 </ul>
 
-<h3>Denali</h3>
-<ul>
+<h3>Click to see facts about Denali!</h3>
+<ul class="hidden-facts">
     <li>Denali National Park is larger than the state of New Jersey</li>
     <li>Denali is the highest mountain peak in North America- 20,320 feet high</li>
     <li>The wood frogs of Denali freeze themselves into a cryogenic state in wintertime. Their heart stops beating and lungs cease pumping until the frog thaws in the spring.</li>
     <li>Denali (the mountain) is visible from 200 miles away</li>
 </ul>
 
-<h3>Yosemite</h3>
-<ul>
+<h3>Click to see facts about Yosemite!</h3>
+<ul class="hidden-facts">
     <li>Yosemite National Park is home to over 400 animal species</li>
     <li>At 2,425 feet, Yosemite Falls is one of tallest on the planet</li>
     <li>Yosemite is the only national park to bid to host the winter Olympics</li>
@@ -96,6 +103,11 @@
     let dds = document.getElementsByTagName('dd');
     let makeYellow = document.getElementById('make-yellow');
     let ul = document.getElementsByTagName('ul');
+    let hideNews = document.getElementById('hide-news');
+    let newsAd = document.getElementById('news-ad');
+    let h3 = document.getElementsByTagName('h3');
+    let hiddenFacts = document.getElementsByClassName("hidden-facts");
+    let register = document.getElementById("register");
 
     $(document).ready(function() {
 
@@ -120,13 +132,24 @@
            });
         });
 
-        $('h3').click(function() {
-            $(this).next().children().toggleClass('bold');
-        });
-
         $('li').click(function() {
             $(this).parent().children().first().toggleClass('blue');
         })
+
+        $(hideNews).click(function () {
+            $(newsAd).hide();
+        })
+
+        $(hiddenFacts).hide();
+
+        $(h3).click(function() {
+            //$(this).next().children().toggleClass('bold');
+            $(this).next().slideToggle().show();
+        })
+
+        $(register).hide();
+        $(register).delay(8000).fadeIn(2000);
+
     });
 </script>
 </body>
