--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -16,9 +16,13 @@
             background: yellow;
         }
 
+        /*
+
         .bold {
             font-weight: bold;
         }
+
+         */
 
         .blue {
             color: blue;
@@ -144,7 +148,7 @@
 
         $(h3).click(function() {
             //$(this).next().children().toggleClass('bold');
-            $(this).next().slideToggle().show();
+            $(this).next().slideToggle();
         })
 
         $(register).hide();
