--- a/weather_map.html
+++ b/weather_map.html
@@ -10,14 +10,53 @@
 </head>
 <body>
 
+<!--Top Navbar-->
+
+<div class="navbar mb-2 p2 text-white" id="navbar"><span id="nav-title">NuStart Weather</span><span id="city"></span></div>
+
+<!--City search form-->
+<div id="input-form">
+    <form>
+        <div class="form-group form-inline ml-3">
+            <label for="cityName" id="search"></label>
+            <input type="text" class="form-control ml-3" id="cityName" placeholder="Enter city">
+            <button class="btn ml-3" type="submit" id="citySearch">Search</button>
+        </div>
+    </form>
+</div>
+
+<!--Placeholder card-->
+<div class="d-flex flex-wrap justify-content-center" id="fiveDay">
+
+    <div class="card mx-2">
+        <div class="card-header">Date Here</div>
+        <div class="card-body text-center">
+            <div class="temp">
+                75F
+            </div>
+            <img src="" alt="icon">
+            <hr>
+            <div class="description pb-4">
+                Description: Loading
+            </div>
+            <div class="humidity">
+                Humidity: Loading
+            </div>
+            <hr>
+            <div class="wind">
+                Wind: Loading
+            </div>
+            <hr>
+            <div class="pressure">
+                Pressure: Loading
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="js/jquery-2.2.4.js"></script>
 <script src="js/keys.js"></script>
-
-<script>
-
-
-</script>
+<script src="js/weather.js"></script>
 
 <script src="js/maxbox-geocoder-utils.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
