--- a/weather_map.html
+++ b/weather_map.html
@@ -25,7 +25,7 @@
     </form>
 </div>
 
-<!--Placeholder card-->
+<!--Placeholder card -->
 <div class="d-flex flex-wrap justify-content-center" id="fiveDay">
 
     <div class="card mx-2">
@@ -54,11 +54,17 @@
     </div>
 </div>
 
-<script src="js/jquery-2.2.4.js"></script>
+<div id="map" style="width: 100%; height: 300px;"></div>
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
 <script src="js/keys.js"></script>
+<script src="js/mapbox-geocoder-utils.js"></script>
+
+<script src="js/jquery-2.2.4.js"></script>
+
 <script src="js/weather.js"></script>
 
-<script src="js/maxbox-geocoder-utils.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
