first draft of card creator function

--- a/weather_map.html
+++ b/weather_map.html
@@ -26,7 +26,7 @@
 </div>
 
 <!--Placeholder card -->
-<div class="d-flex flex-wrap justify-content-center" id="fiveDay">
+<div class="d-flex flex-wrap justify-content-center" id="weatherCards">
 
     <div class="card mx-2">
         <div class="card-header">Date Here</div>
