--- a/weather_map.html
+++ b/weather_map.html
@@ -15,12 +15,14 @@
 <div class="navbar mb-2 p2 text-white" id="navbar"><span id="nav-title">NuStart Weather</span><span id="city"></span></div>
 
 <!--City search form-->
+
+
 <div id="input-form">
     <form>
         <div class="form-group form-inline ml-3">
-            <label for="cityName" id="search"></label>
+            <label for="cityName" id="search">Place</label>
             <input type="text" class="form-control ml-3" id="cityName" placeholder="Enter city">
-            <button class="btn ml-3" type="submit" id="citySearch">Search</button>
+            <button class="btn btn-primary ml-3" type="submit" id="citySearch">Search</button>
         </div>
     </form>
 </div>
