--- a/weather_map.html
+++ b/weather_map.html
@@ -28,7 +28,7 @@
 </div>
 
     <div class="row justify-content-center">
-        <div class="col-6" id="map" style="width: 100%; height: 600px;"></div>
+        <div class="col-6" id="map" style="width: 100%"></div>
     </div>
 
 <!--Placeholder card -->
